--- a/RemoteRelay/SingleOutput/SingleOutputView.axaml
+++ b/RemoteRelay/SingleOutput/SingleOutputView.axaml
@@ -8,7 +8,7 @@
              x:Class="RemoteRelay.SingleOutput.SingleOutputView"
              x:DataType="singleOutput:SingleOutputViewModel">
 
-    <Grid ShowGridLines="True">
+    <Grid ShowGridLines="False">
         <Grid.RowDefinitions>
             <RowDefinition Height="20*" />
             <RowDefinition Height="40*" />
@@ -56,7 +56,8 @@
         <Image Source="{Binding StationLogo}"
                         Grid.Row="2"
                         Grid.Column="2"
-                        Margin="10" />
+                        Margin="10" 
+                        Stretch="UniformToFill"/>
 
         <ContentControl Content="{Binding Output}"
                         Grid.Row="2"
