--- a/RemoteRelay/MainWindow.axaml
+++ b/RemoteRelay/MainWindow.axaml
@@ -7,7 +7,8 @@
         x:Class="RemoteRelay.MainWindow"
         Title="SourceSwitcher"
         Width="600" Height="300"
-        x:DataType="local:MainWindowViewModel">
+        x:DataType="local:MainWindowViewModel"
+        WindowState="FullScreen">
 
     <Window.DataTemplates>
         <DataTemplate DataType="{x:Type singleOutput:SingleOutputViewModel}">
