--- a/RemoteRelay/MultiOutput/MultiOutputView.axaml
+++ b/RemoteRelay/MultiOutput/MultiOutputView.axaml
@@ -19,12 +19,20 @@
         </Grid.RowDefinitions>
 
         <Viewbox Grid.Row="0" Stretch="Uniform">
-            <Label Content="{Binding StatusMessage}"
-                   HorizontalAlignment="Stretch"
-                   VerticalAlignment="Stretch"
-                   HorizontalContentAlignment="Center"
-                   VerticalContentAlignment="Center"
-                   Padding="20" />
+            <Grid>
+                <Label Content="{Binding StatusMessage}"
+                       HorizontalAlignment="Stretch"
+                       VerticalAlignment="Stretch"
+                       HorizontalContentAlignment="Center"
+                       VerticalContentAlignment="Center"
+                       Padding="20" />
+                <TextBlock Text="{Binding FilterStatusMessage}"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Top"
+                           Margin="0,5,10,0"
+                           FontSize="12"
+                           Foreground="Gray" />
+            </Grid>
         </Viewbox>
 
         <Grid Grid.Row="1" Margin="20,10">
