--- a/RemoteRelay/MainWindow.axaml
+++ b/RemoteRelay/MainWindow.axaml
@@ -23,6 +23,13 @@
     </Window.DataTemplates>
 
     <DockPanel>
+        <TextBlock Text="{Binding UpdateMessage}"
+                   DockPanel.Dock="Top"
+                   HorizontalAlignment="Center"
+                   Foreground="Orange"
+                   FontWeight="Bold"
+                   Margin="5" 
+                   IsVisible="{Binding UpdateMessage, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
         <TextBlock Text="{Binding ServerStatusMessage}"
                    DockPanel.Dock="Top"
                    HorizontalAlignment="Center"
