--- a/RemoteRelay/MultiOutput/MultiOutputView.axaml
+++ b/RemoteRelay/MultiOutput/MultiOutputView.axaml
@@ -18,6 +18,16 @@
             <RowDefinition Height="15*" />
         </Grid.RowDefinitions>
 
+        <!-- IP Address in top left corner -->
+        <TextBlock Text="{Binding HostIpAddress}"
+                   Grid.Row="0"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Top"
+                   Margin="15,5,0,0"
+                   FontSize="14"
+                   Foreground="Gray"
+                   IsVisible="{Binding ShowIpOnScreen}" />
+
         <!-- Filter status in top right corner -->
         <TextBlock Text="{Binding FilterStatusMessage}"
                    Grid.Row="0"
