--- a/RemoteRelay/MultiOutput/MultiOutputView.axaml
+++ b/RemoteRelay/MultiOutput/MultiOutputView.axaml
@@ -28,6 +28,15 @@
                    Foreground="Gray"
                    IsVisible="{Binding ShowIpOnScreen}" />
 
+        <!-- Clock in top center -->
+        <TextBlock Text="{Binding CurrentTime}"
+                   Grid.Row="0"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Margin="0,5,0,0"
+                   FontSize="14"
+                   Foreground="Gray" />
+
         <!-- Filter status in top right corner -->
         <TextBlock Text="{Binding FilterStatusMessage}"
                    Grid.Row="0"
@@ -105,6 +114,10 @@
                    Stretch="Uniform"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center" />
+
+            <ContentControl Content="{Binding OffButton}"
+                            Grid.Column="2"
+                            Margin="10" />
         </Grid>
     </Grid>
 
